--- a/Disease Similarity Fusion Main.Rmd
+++ b/Disease Similarity Fusion Main.Rmd
@@ -139,7 +139,7 @@ plot(hclust(as.dist(1-fusedMatrixSig)))
 
 
 ### Write the disease map to a graph representation which can be imported to Cytoscape or other graph analysis software
-```{r,echo = FALSE,eval=FALSE}
+```{r,eval=FALSE}
 # Create graph representation from significant similarity matrix using igraph function
 binarygraph  = graph_from_adjacency_matrix(fusedMatrixSig,mode = "undirected",weighted = TRUE,diag = FALSE)
 
