--- a/Disease Similarity Fusion Main.Rmd
+++ b/Disease Similarity Fusion Main.Rmd
@@ -370,7 +370,7 @@ ticks <- list(
 
 plot_ly(data,x = ~x, y = ~y1NonDO, type = 'scatter', mode = 'lines+markers', name = 'Fused (NonDO): All links',line = list(color = "rgb(31, 119, 180)",dash = 'line'),marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Rand, type = 'scatter', mode = 'lines+markers', name = 'Random: All links',line = list(color = "lightgrey",dash = 'line'), marker = list(opacity = 0)) %>%
-   add_trace(x = ~x, y = ~y1DO, type = 'scatter', mode = 'lines+markers', name = 'DO: All links',line = list(color = "yellow",dash = 'line'), marker = list(opacity = 0)) %>%
+   add_trace(x = ~x, y = ~y1DO, type = 'scatter', mode = 'lines+markers', name = 'DO: All links',line = list(color = "red",dash = 'line'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Pheno, type = 'scatter', mode = 'lines+markers', name = 'Pheno: All links',line = list(color = "orange",dash = 'line'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Lit, type = 'scatter', mode = 'lines+markers', name = 'Lit: All links',line = list(color = "lightgreen",dash = 'line'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Disgene, type = 'scatter', mode = 'lines+markers', name = 'Disgene: All links',line = list(color = "lightpink",dash = 'line'), marker = list(opacity = 0)) %>%
@@ -397,7 +397,8 @@ y1Disgene = sapply(jaccardScoresApprovedAndPhaseThreeDrugs, function(x) x[[5]])
 y1Trans = sapply(jaccardScoresApprovedAndPhaseThreeDrugs, function(x) x[[6]])
 y1Drug = sapply(jaccardScoresApprovedAndPhaseThreeDrugs, function(x) x[[7]])
 y1NonDrug = sapply(jaccardScoresApprovedAndPhaseThreeDrugs, function(x) x[[8]])
-data = data.frame(x,y1Rand,y1DO,y1Pheno,y1Lit,y1Disgene,y1Trans,y1Drug,y1NonDrug)
+y1Avg = sapply(jaccardScoresApprovedAndPhaseThreeDrugs, function(x) mean(x[2:6]))
+data = data.frame(x,y1Rand,y1DO,y1Pheno,y1Lit,y1Disgene,y1Trans,y1Drug,y1NonDrug,y1Avg)
 #The default order will be alphabetized unless specified as below:
 data$x <- factor(data$x, levels = data[["x"]])
 
@@ -410,12 +411,13 @@ ticks <- list(
 
 
 plot_ly(data,x = ~x, y = ~y1NonDrug, type = 'scatter', mode = 'lines+markers', name = 'Fused (minus drug space)',line = list(color = "rgb(31, 119, 180)",dash = 'line'),marker = list(opacity = 0)) %>%
-   add_trace(x = ~x, y = ~y1DO, type = 'scatter', mode = 'lines+markers', name = 'Ontological',line = list(color = "yellow",dash = 'dot'), marker = list(opacity = 0)) %>%
+   add_trace(x = ~x, y = ~y1DO, type = 'scatter', mode = 'lines+markers', name = 'Ontological',line = list(color = "red",dash = 'dot'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Pheno, type = 'scatter', mode = 'lines+markers', name = 'Phenotype',line = list(color = "orange",dash = 'dot'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Lit, type = 'scatter', mode = 'lines+markers', name = 'Literature co-occurrence',line = list(color = "lightgreen",dash = 'dot'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Disgene, type = 'scatter', mode = 'lines+markers', name = 'Genetic',line = list(color = "lightpink",dash = 'dot'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Trans, type = 'scatter', mode = 'lines+markers', name = 'Gene expression',line = list(color = "lightblue",dash = 'dot'), marker = list(opacity = 0)) %>%
   add_trace(x = ~x, y = ~y1Rand, type = 'scatter', mode = 'lines+markers', name = 'Random map',line = list(color = "lightgrey",dash = 'dot'), marker = list(opacity = 0)) %>%
+    add_trace(x = ~x, y = ~y1Avg, type = 'scatter', mode = 'lines+markers', name = 'Average of five individual spaces',line = list(color = "lightgrey",dash = 'line'), marker = list(opacity = 0)) %>%
   layout(xaxis = ticks, 
          yaxis = list(title = "Mean Jaccard drug overlap of linked diseases"),
          legend = list(x = 0.1, y = 0.9),
@@ -425,6 +427,50 @@ plot_ly(data,x = ~x, y = ~y1NonDrug, type = 'scatter', mode = 'lines+markers', n
 
 ```
 
+
+
+#### What's the relationship between the similarity cut-off and the mean Jaccard overlap of drugs shared by the linked diseases (approved drugs only)
+
+```{r, echo=FALSE, fig.width=10}
+
+x = c(seq(0, 0.98, 0.01),0.99)
+y1Rand = sapply(jaccardScoresApprovedDrugs, function(x) x[[1]])
+y1DO = sapply(jaccardScoresApprovedDrugs, function(x) x[[2]])
+y1Pheno = sapply(jaccardScoresApprovedDrugs, function(x) x[[3]])
+y1Lit = sapply(jaccardScoresApprovedDrugs, function(x) x[[4]])
+y1Disgene = sapply(jaccardScoresApprovedDrugs, function(x) x[[5]])
+y1Trans = sapply(jaccardScoresApprovedDrugs, function(x) x[[6]])
+y1Drug = sapply(jaccardScoresApprovedDrugs, function(x) x[[7]])
+y1NonDrug = sapply(jaccardScoresApprovedDrugs, function(x) x[[8]])
+y1Avg = sapply(jaccardScoresApprovedDrugs, function(x) mean(x[2:6]))
+data = data.frame(x,y1Rand,y1DO,y1Pheno,y1Lit,y1Disgene,y1Trans,y1Drug,y1NonDrug,y1Avg)
+#The default order will be alphabetized unless specified as below:
+data$x <- factor(data$x, levels = data[["x"]])
+
+ticks <- list(
+  title = "Similarity threshold used to define linked diseases",
+  autotick = FALSE,
+  tick0 = 0,
+  dtick = 10 #This just tells it to only label every other tick
+)
+
+
+plot_ly(data,x = ~x, y = ~y1NonDrug, type = 'scatter', mode = 'lines+markers', name = 'Fused (minus drug space)',line = list(color = "rgb(31, 119, 180)",dash = 'line'),marker = list(opacity = 0)) %>%
+   add_trace(x = ~x, y = ~y1DO, type = 'scatter', mode = 'lines+markers', name = 'Ontological',line = list(color = "red",dash = 'dot'), marker = list(opacity = 0)) %>%
+   add_trace(x = ~x, y = ~y1Pheno, type = 'scatter', mode = 'lines+markers', name = 'Phenotype',line = list(color = "orange",dash = 'dot'), marker = list(opacity = 0)) %>%
+   add_trace(x = ~x, y = ~y1Lit, type = 'scatter', mode = 'lines+markers', name = 'Literature co-occurrence',line = list(color = "lightgreen",dash = 'dot'), marker = list(opacity = 0)) %>%
+   add_trace(x = ~x, y = ~y1Disgene, type = 'scatter', mode = 'lines+markers', name = 'Genetic',line = list(color = "lightpink",dash = 'dot'), marker = list(opacity = 0)) %>%
+   add_trace(x = ~x, y = ~y1Trans, type = 'scatter', mode = 'lines+markers', name = 'Gene expression',line = list(color = "lightblue",dash = 'dot'), marker = list(opacity = 0)) %>%
+  add_trace(x = ~x, y = ~y1Rand, type = 'scatter', mode = 'lines+markers', name = 'Random map',line = list(color = "lightgrey",dash = 'dot'), marker = list(opacity = 0)) %>%
+    add_trace(x = ~x, y = ~y1Avg, type = 'scatter', mode = 'lines+markers', name = 'Average of five individual spaces',line = list(color = "lightgrey",dash = 'line'), marker = list(opacity = 0)) %>%
+  layout(xaxis = ticks, 
+         yaxis = list(title = "Mean Jaccard drug overlap of linked diseases"),
+         legend = list(x = 0.1, y = 0.9),
+         font = t,
+         margin = list(b = 100),
+         barmode = 'group')
+
+```
 
 #### What's the relationship between the similarity cut-off and the mean Jaccard overlap of drugs shared by the linked diseases (including approved drugs and drugs in Phase III clinical trials): Novel links only
 ```{r, echo=FALSE, fig.width=10}
@@ -453,53 +499,12 @@ ticks <- list(
 
 
 plot_ly(data,x = ~x, y = ~y1NonDrug, type = 'scatter', mode = 'lines+markers', name = 'Fused (minus drug space), novel links only',line = list(color = "rgb(31, 119, 180)",dash = 'line'),marker = list(opacity = 0)) %>%
-   add_trace(x = ~x, y = ~y1DO, type = 'scatter', mode = 'lines+markers', name = 'Ontological, novel links only',line = list(color = "yellow",dash = 'dot'), marker = list(opacity = 0)) %>%
+   add_trace(x = ~x, y = ~y1DO, type = 'scatter', mode = 'lines+markers', name = 'Ontological, novel links only',line = list(color = "red",dash = 'dot'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Pheno, type = 'scatter', mode = 'lines+markers', name = 'Phenotype, novel links only',line = list(color = "orange",dash = 'dot'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Lit, type = 'scatter', mode = 'lines+markers', name = 'Literature co-occurrence, novel links only',line = list(color = "lightgreen",dash = 'dot'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Disgene, type = 'scatter', mode = 'lines+markers', name = 'Genetic, novel links only',line = list(color = "lightpink",dash = 'dot'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Trans, type = 'scatter', mode = 'lines+markers', name = 'Gene expression, novel links only',line = list(color = "lightblue",dash = 'dot'), marker = list(opacity = 0)) %>%
   add_trace(x = ~x, y = ~y1Rand, type = 'scatter', mode = 'lines+markers', name = 'Random map, novel links only',line = list(color = "lightgrey",dash = 'dot'), marker = list(opacity = 0)) %>%
-  layout(xaxis = ticks, 
-         yaxis = list(title = "Mean Jaccard drug overlap of linked diseases"),
-         legend = list(x = 0.1, y = 0.9),
-         font = t,
-         margin = list(b = 100),
-         barmode = 'group')
-
-```
-
-#### What's the relationship between the similarity cut-off and the mean Jaccard overlap of drugs shared by the linked diseases (approved drugs only)
-
-```{r, echo=FALSE, fig.width=10}
-
-x = c(seq(0, 0.98, 0.01),0.99)
-y1Rand = sapply(jaccardScoresApprovedDrugs, function(x) x[[1]])
-y1DO = sapply(jaccardScoresApprovedDrugs, function(x) x[[2]])
-y1Pheno = sapply(jaccardScoresApprovedDrugs, function(x) x[[3]])
-y1Lit = sapply(jaccardScoresApprovedDrugs, function(x) x[[4]])
-y1Disgene = sapply(jaccardScoresApprovedDrugs, function(x) x[[5]])
-y1Trans = sapply(jaccardScoresApprovedDrugs, function(x) x[[6]])
-y1Drug = sapply(jaccardScoresApprovedDrugs, function(x) x[[7]])
-y1NonDrug = sapply(jaccardScoresApprovedDrugs, function(x) x[[8]])
-data = data.frame(x,y1Rand,y1DO,y1Pheno,y1Lit,y1Disgene,y1Trans,y1Drug,y1NonDrug)
-#The default order will be alphabetized unless specified as below:
-data$x <- factor(data$x, levels = data[["x"]])
-
-ticks <- list(
-  title = "Similarity threshold used to define linked diseases",
-  autotick = FALSE,
-  tick0 = 0,
-  dtick = 10 #This just tells it to only label every other tick
-)
-
-
-plot_ly(data,x = ~x, y = ~y1NonDrug, type = 'scatter', mode = 'lines+markers', name = 'Fused (minus drug space)',line = list(color = "rgb(31, 119, 180)",dash = 'line'),marker = list(opacity = 0)) %>%
-   add_trace(x = ~x, y = ~y1DO, type = 'scatter', mode = 'lines+markers', name = 'Ontological',line = list(color = "yellow",dash = 'dot'), marker = list(opacity = 0)) %>%
-   add_trace(x = ~x, y = ~y1Pheno, type = 'scatter', mode = 'lines+markers', name = 'Phenotype',line = list(color = "orange",dash = 'dot'), marker = list(opacity = 0)) %>%
-   add_trace(x = ~x, y = ~y1Lit, type = 'scatter', mode = 'lines+markers', name = 'Literature co-occurrence',line = list(color = "lightgreen",dash = 'dot'), marker = list(opacity = 0)) %>%
-   add_trace(x = ~x, y = ~y1Disgene, type = 'scatter', mode = 'lines+markers', name = 'Genetic',line = list(color = "lightpink",dash = 'dot'), marker = list(opacity = 0)) %>%
-   add_trace(x = ~x, y = ~y1Trans, type = 'scatter', mode = 'lines+markers', name = 'Gene expression',line = list(color = "lightblue",dash = 'dot'), marker = list(opacity = 0)) %>%
-  add_trace(x = ~x, y = ~y1Rand, type = 'scatter', mode = 'lines+markers', name = 'Random map',line = list(color = "lightgrey",dash = 'dot'), marker = list(opacity = 0)) %>%
   layout(xaxis = ticks, 
          yaxis = list(title = "Mean Jaccard drug overlap of linked diseases"),
          legend = list(x = 0.1, y = 0.9),
@@ -529,7 +534,7 @@ data$x <- factor(data$x, levels = data[["x"]])
 
 
 plot_ly(data,x = ~x, y = ~y1NonDrug, type = 'scatter', mode = 'lines+markers', name = 'Fused (minus drug space), novel links only, approved drugs only',line = list(color = "rgb(31, 119, 180)",dash = 'line'),marker = list(opacity = 0)) %>%
-   add_trace(x = ~x, y = ~y1DO, type = 'scatter', mode = 'lines+markers', name = 'Ontological, novel links only, approved drugs only',line = list(color = "yellow",dash = 'dot'), marker = list(opacity = 0)) %>%
+   add_trace(x = ~x, y = ~y1DO, type = 'scatter', mode = 'lines+markers', name = 'Ontological, novel links only, approved drugs only',line = list(color = "red",dash = 'dot'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Pheno, type = 'scatter', mode = 'lines+markers', name = 'Phenotype, novel links only, approved drugs only',line = list(color = "orange",dash = 'dot'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Lit, type = 'scatter', mode = 'lines+markers', name = 'Literature co-occurrence, novel links only, approved drugs only',line = list(color = "lightgreen",dash = 'dot'), marker = list(opacity = 0)) %>%
    add_trace(x = ~x, y = ~y1Disgene, type = 'scatter', mode = 'lines+markers', name = 'Genetic, novel links only, approved drugs only',line = list(color = "lightpink",dash = 'dot'), marker = list(opacity = 0)) %>%
